--- a/practice.html
+++ b/practice.html
@@ -1,12 +1,27 @@
 <!DOCTYPE HTML>
-<html lang="ja">
+<html lag="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>練習</title>
-    <link rel="stylesheet" href="practice.css" />
+    <title>practice</title>
+    <link rel="stylesheet" href="practice.css"/>
   </head>
+   <h1>サービス紹介</h1>
+    <h2>webcamp</h2>
+     <p>マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。</p>
+     <a href="http://34.219.19.179/">webサイト</a>
 
-  <body>
-   練習
+    <h2>webcamp pro</h2>
+     <p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
+     <a href="http://34.219.19.179/">webサイト</a>
+
+    <h2>webcamp woman</h2>
+     <p>家庭も仕事も頑張りたい主婦・ママ向けの、１ヶ月でWebサイトを制作するWebデザインスクールです。</p>
+     <a href="http://34.219.19.179/">webサイト</a>
+
+    <h2>webcamp career</h2>
+     <p>3000名のエンジニアをサポートしてきたエージェントがあなたの転職をサポート。</p>
+     <a href="http://34.219.19.179/">webサイト</a>
+    <body>
+
   </body>
 </html>
